--- a/Numpy_3_Image_Manipulation.ipynb
+++ b/Numpy_3_Image_Manipulation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNNcZiivSKwJLbMfAgePzFf",
+      "authorship_tag": "ABX9TyOLXvGTpv+qYjH64owQFAFE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "V7zKUXfuVME_"
       },
@@ -39,9 +39,32 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print('hello world')"
+      ],
+      "metadata": {
+        "id": "KvvKTwQ9VVT4",
+        "outputId": "a2619c09-5e66-44f3-9963-78e230c47c3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "KvvKTwQ9VVT4"
+        "id": "RvWJevGqeSRW"
       },
       "execution_count": null,
       "outputs": []
